IPC-over-mojo: Eliminate two buffer copies.

This CL:
- introduces a mojom type mojo.common.mojom.ReadOnlyBuffer and typemaps it to
base::span<const uint8_t>.
- changes ipc.mojom.Channel.Receive() to use this new type, so that we
can eliminate two buffer copies for each IPC message.

Please note that this approach relies on the fact that an incoming message stays
valid while making call to user code with the deseralized results.

=====================================================
Linux Z620; release component build

Before:
IPC_ChannelProxy_Perf_50000x_12 4247.97 ms
IPC_ChannelProxy_Perf_50000x_144  3626.01 ms
IPC_ChannelProxy_Perf_50000x_1728 4323.34 ms
IPC_ChannelProxy_Perf_12000x_20736  5419.29 ms
IPC_ChannelProxy_Perf_1000x_248832  4769.07 ms

After:
IPC_ChannelProxy_Perf_50000x_12 3770.21 ms
IPC_ChannelProxy_Perf_50000x_144  3710.2  ms
IPC_ChannelProxy_Perf_50000x_1728 4076.09 ms
IPC_ChannelProxy_Perf_12000x_20736  1461.84 ms
IPC_ChannelProxy_Perf_1000x_248832  1059.52 ms
=====================================================

BUG=758788

Change-Id: Id9d1ef0592482f6d75ff139feba6a36e79eb7e6d
Reviewed-on: https://chromium-review.googlesource.com/634450
Commit-Queue: Yuzhu Shen <yzshen@chromium.org>
Reviewed-by: Tom Sepez <tsepez@chromium.org>
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Cr-Commit-Position: refs/heads/master@{#497565}
Former-commit-id: a0a2b36b3ca41a53d0cf29bca93ae26c12e8fab5