ipc/ipc_message_pipe_reader.h
@@ -94,7 +94,7 @@ class IPC_EXPORT MessagePipeReader : public mojom::Channel {
   // mojom::Channel:
   void SetPeerPid(int32_t peer_pid) override;
   void Receive(
-      const std::vector<uint8_t>& data,
+      base::span<const uint8_t> data,
       base::Optional<std::vector<mojom::SerializedHandlePtr>> handles) override;
   void GetAssociatedInterface(
       const std::string& name,
