ipc/ipc_mojo_bootstrap_unittest.cc
@@ -42,7 +42,7 @@ class PeerPidReceiver : public IPC::mojom::Channel {
     on_peer_pid_set_.Run();
   }
 
-  void Receive(const std::vector<uint8_t>& data,
+  void Receive(base::span<const uint8_t> data,
                base::Optional<std::vector<IPC::mojom::SerializedHandlePtr>>
                    handles) override {}
 
